league 1x2 - refactoring for java 8